--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -36,6 +36,7 @@ input::-webkit-input-placeholder {
   text-align: center;
   font-weight: bold;
   margin-top: 1rem;
+  margin-bottom: 1rem;
   text-align: center;
   display: block;
 }
@@ -64,15 +65,6 @@ input::-webkit-input-placeholder {
   margin-top: 1rem;
   width: 100%;
 }
-
-.form {
-  text-align: center;
-}
-/* 
-.form2{
-    position: absolute;
-    text-align: center;
-  } */
 
 .next {
   position: absolute;
