--- a/src/app/user-page/user-page.component.css
+++ b/src/app/user-page/user-page.component.css
@@ -3,3 +3,62 @@
   height: 80px;
   object-fit: cover;
 }
+
+.form-control-loading {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-control-loading:focus {
+  border-color: transparent !important;
+  outline: 0 !important;
+}
+
+.form-control-loading:empty,
+.thumbnails:empty,
+.text1:empty,
+.text2:empty,
+.text3:empty,
+.text4:empty {
+  animation: loading 1.1s infinite linear;
+  background: #dedfe1;
+  background-image: -webkit-linear-gradient(
+    to right,
+    #dedfe1 0%,
+    #f2f3f5 20%,
+    #dedfe1 40%,
+    #dedfe1 100%
+  );
+  background-image: linear-gradient(
+    to right,
+    #dedfe1 0%,
+    #f2f3f5 20%,
+    #dedfe1 40%,
+    #dedfe1 100%
+  );
+  background-repeat: no-repeat;
+}
+
+@keyframes loading {
+  0% {
+    border: 0;
+    background-position: -100px;
+  }
+  100% {
+    border: 0;
+    background-position: 200px;
+  }
+}
