--- a/src/app/user-page/user-page.component.css
+++ b/src/app/user-page/user-page.component.css
@@ -13,8 +13,6 @@
   line-height: 1.5;
   color: #212529;
   background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -33,13 +31,15 @@
 .text2:empty,
 .text3:empty,
 .text4:empty {
-  animation: loading 1.1s infinite linear;
+  animation: loading 2s infinite ease-in-out;
   background: #dedfe1;
   background-image: -webkit-linear-gradient(
     to right,
     #dedfe1 0%,
     #f2f3f5 20%,
     #dedfe1 40%,
+    #dedfe1 60%,
+    #dedfe1 80%,
     #dedfe1 100%
   );
   background-image: linear-gradient(
@@ -47,6 +47,8 @@
     #dedfe1 0%,
     #f2f3f5 20%,
     #dedfe1 40%,
+    #dedfe1 60%,
+    #dedfe1 80%,
     #dedfe1 100%
   );
   background-repeat: no-repeat;
